samples/_failures_safe/1761043855_75560c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f5f6d2fb.c: In function ‘tokenize’:
./samples/SAFE/__tmp_f5f6d2fb.c:159:34: error: expected ‘;’ at end of input
  159 |             tokens[token_count++]
      |                                  ^
      |                                  ;
./samples/SAFE/__tmp_f5f6d2fb.c:159:13: error: expected declaration or statement at end of input
  159 |             tokens[token_count++]
      |             ^~~~~~
./samples/SAFE/__tmp_f5f6d2fb.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f5f6d2fb.c:159:13: error: expected declaration or statement at end of input
